fixed spellings/alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1374,3 +1374,19 @@ section {
   color: #fff;
   transform: scale(1.1);
 }
+
+
+/* media query for my name  */
+/* Media query for medium-sized screens */
+@media (max-width: 992px) {
+    .profile-name {
+      margin-top: 15px; /* Adjust the margin value as per your preference */
+  }
+}
+
+  /* Media query for small-sized screens */
+@media (max-width: 768px) {
+    .profile-name {
+      margin-top: 20px; /* Adjust the margin value as per your preference */
+  }
+}
